# ecsgame

./: CMakeLists.txt  LICENSE  README.md  Shader.cpp  Shader.h  main.cpp
ECS/Components/: Camera.h  DirectionalLight.h  LODObjMesh.h  Mesh.h  MouseLook.h  Movement.h  ObjMesh.h  PathMove.h  Position.h  SineAnimation.h  Texture.h  Transform.h
ECS/Events/: InputEvent.h  MouseMoveEvent.h
ECS/Systems/: GravitySystem.h  InteractivePathSystem.h  KeyboardMovementSystem.h  MouseLookSystem.h  PathMoveSystem.h  PathMovementSwitchSystem.h  PositionDebugSystem.h  RenderSystem.h  SineAnimationSystem.h
Rendering/: Material.h  Shader.cpp  Shader.h
Resources/: Monkey.mtl  bench.mtl
Shaders/: debug-fragment.fs  default-fragment.fs  default-vertex.vs  shadow-fragment.fs
Util/: glad.c
